# heron_controller

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  kingfisher_base.rosinstall  kingfisher_firmware.rosinstall  package.xml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
config/: heron_controller.yaml  kingfisher_controller.yaml
include/heron_controller/: controller.h  force_compensator.h  heron_constants.h
include/kingfisher_controller/: controller.h  force_compensator.h
include/kingfisher_node/: controller.h
kingfisher_bringup/launch/core/: imu.launch  robot_pose_ekf_gps.launch
kingfisher_bringup/scripts/: calibrate-compass
kingfisher_msgs/msg/: Drive.msg
kingfisher_node/: base.launch  controller.launch
kingfisher_node/include/kingfisher_node/: controller.h  force_compensator.h  kf_constants.h
kingfisher_node/src/: controller.cpp  force_compensator.cpp
launch/: controller.launch
nodes/: heron.py  sonarmite.py  trial.py  wifi_monitor.py
src/: controller.cpp  force_compensator.cpp
srv/: ActivateControl.srv
