<?xml version="1.0"?>
<package format="2">
  <name>heron_controller</name>
  <version>0.2.0</version>
  <description>The heron_controller package</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <author>Prasenjit Mukherjee</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>control_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>heron_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
